<resources>
    <string name="app_name">Servizm</string>
    <string name="phoneauth_text">Telefon numaranızı Giriniz</string>
    <string name="phoneauthBtnGetCodeText">Get Code</string>
    <string name="phoneauthTxtPhoneNumberHint">Phone Number</string>
    <string name="swipe_action_icon" />
    <string name="phone_auth_hadi">hadi!</string>
    <string name="phone_auth_txtdetail">organizasyonuna en uygun servisi bulalım.</string>
    <string name="activity_phone_txt_veya">veya</string>
    <string name="activity_phone_txt_face">facebook veya gmail ile devam et</string>
    <string name="activity_phone_txt">cep telefonu numaranı gir</string>
    <string name="activity_send_sms_info_text">telefon numaranıza bir kod göndereceğiz</string>
    <string name="act_send_sms_phone_number">+90</string>
    <string name="act_send_sms_detail_text">Sed vel pretium libero. Vivamus quis fringilla lacus. Praesent venenatis malesuada arcu, sit amet lobortis lectus dignissim non. In aliquam nec nulla porttitor vestibulum. Nullam porta quam nisi, sit amet interdum arcu pretium nec.</string>
    <string name="act_send_sms_btn_ilerle">ilerle</string>
    <string name="activity_enter_sms_txt_detail">nolu telefonunuza gelen kodu girin</string>
    <string name="send_sms_kod_gelmedi_mi">kod gelmedi mi?</string>
    <string name="send_sms_tamam">tamam</string>
    <string name="main_txt_info">Ana Ekran</string>
    <string name="enter_sms_back"><![CDATA[<]]></string>
    <string name="mapBoxKey">pk.eyJ1Ijoic2Vydml6bSIsImEiOiJjanFpMmYzZHYwaGQyNDhxeTJxbmV3bmZjIn0.6yEQk9nZZPuT9vuHQ9Kwog</string>
</resources>
