<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendSmsActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="135dp"
        android:layout_height="29dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/swipe_action_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/servizm_logo_horizontal" />

    <TextView
        android:layout_width="217dp"
        android:layout_height="41dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/activity_send_sms_info_text"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/act_send_sms_phone_number"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="17"
        android:textAlignment="viewStart"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="40dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/act_send_sms_detail_text"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/brownish_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/btnIlerle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="76dp"
        android:gravity="end"
        android:text="@string/act_send_sms_btn_ilerle"
        android:textColor="@color/reddish_pink"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageIlerle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/com_facebook_loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/c_2_a_arrow_01" />




</android.support.constraint.ConstraintLayout>